# Avanguardia-Publica

./: .env  .env.example  .gitignore  AGENTS.md  AGENT_RULES.md  AI.md  AUTHORS  CONTRIBUTING.md  README.md  STATE_DATA_SOURCES.md  avanguardia-publica-spec.md  docker-compose.yml  fix_and_push.sh  handoff.md  schema.sql  setup_nextjs.sh  spec.md  uispec.md
backend/: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml
backend/alembic/: alembic.ini  env.py  script.py.mako
backend/alembic/versions/: 5b8e498be220_phase_3_financial_politician_nullable.py  a7b4496a01ea_initial_schema.py  c3e61c962fc7_phase_2_data_richness_schema.py  d4a8f3b1c9e2_phase_4_fulltext_search.py  f7c2a1d4b3e5_phase_5_country_jurisdiction.py
backend/app/: main.py
backend/app/api/routers/: __init__.py  admin.py  contracts.py  contributions.py  financials.py  lobbying.py  organizations.py  politicians.py  search.py  tags.py  voting.py
backend/app/core/: auth.py  cache.py  celery_app.py  config.py
backend/app/etl/: base.py  ca_calaccess.py  canada_elections.py  congress_gov.py  entity_resolver.py  fec.py  house_clerk.py  opensecrets.py  quiver_quant.py  sec_edgar.py  senate_lda.py  tasks.py  usaspending.py  voteview.py
backend/app/models/: __init__.py  contract.py  contribution.py  financial.py  ideology.py  junctions.py  lobbying.py  organization.py  politician.py  source.py  tag.py  voting.py
backend/app/schemas/: contract.py  contribution.py  financial.py  lobbying.py  organization.py  politician.py  search.py  tag.py  voting.py
docs/: ADMIN.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPING.md  USAGE.md  canonical_data_and_analytics_plan.md  connections_design.md  data_driven_analytics_plan.md  self_hosted_supabase_migration.md  source_usage_policy.md  state_votes_design.md
frontend/: .env.example  README.md  eslint.config.js  eslint.config.mjs  example.env  index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
migrations/: 0001_crosswalk_index.sql  0002_politician_location.sql  0003_connections.sql  0004_row_level_security.sql  0005_financial_disclosure_filings.sql  0006_government_classification.sql  0006_supabase_best_practices.sql  0007_government_classification.sql  0008_canonical_politician_rollups.sql  0009_congressional_rollup_normalization.sql  0011_canonical_identity_bridge.sql  (+18 more)
(+132 files in other folders)
